feat (app) agrego dos nuevas operaciones validateCycle y height
